// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SWITCH ## NATIVE ## 01 isOpened: color: 'red', isClosed: color: 'blue' 1`] = `
Array [
  Object {
    "conditions": Array [
      Object {
        "case": "isOpened",
        "type": "$switch",
      },
    ],
    "items": Array [
      "color: red /*./$switch.isOpened*/",
    ],
  },
  Object {
    "conditions": Array [
      Object {
        "case": "isClosed",
        "type": "$switch",
      },
    ],
    "items": Array [
      "color: blue /*./$switch.isClosed*/",
    ],
  },
]
`;

exports[`SWITCH ## NATIVE ## 02 :hover => isOpened => :active => color: 'red' 1`] = `null`;

exports[`SWITCH ## NATIVE ## 03 atomizeRuleset(isOpened => atomizeRuleset(color: 'red), isClosed => atomizeRuleset(color: 'green')) 1`] = `
Array [
  Object {
    "conditions": Array [
      Object {
        "case": "isOpened",
        "type": "$switch",
      },
    ],
    "items": Array [
      "color: red /*.*/",
    ],
  },
  Object {
    "conditions": Array [
      Object {
        "case": "isClosed",
        "type": "$switch",
      },
    ],
    "items": Array [
      "color: green /*.*/",
    ],
  },
]
`;

exports[`SWITCH ## NATIVE ## 04 variant's order: black-red-green-yellow-blue-brown 1`] = `
Array [
  Array [
    "color: black /*.*/",
  ],
  Object {
    "conditions": Array [
      Object {
        "case": "isOpened",
        "type": "$switch",
      },
    ],
    "items": Array [
      "color: red /*./$switch.isOpened*/",
    ],
  },
  Object {
    "conditions": Array [
      Object {
        "case": "isOpened",
        "type": "$switch",
      },
      Object {
        "case": "isClosed",
        "type": "$switch",
      },
    ],
    "items": Array [
      "color: green /*./$switch.isOpened/$switch.isClosed*/",
    ],
  },
]
`;

exports[`SWITCH ## NATIVE ## 05 variant's order with array: $web => brown-blue-yellow-red-black 1`] = `
Array [
  Object {
    "conditions": Array [
      Object {
        "case": "isOpened",
        "type": "$switch",
      },
    ],
    "items": Array [
      "color: red /*.[1]/$switch.isOpened[1]*/",
    ],
  },
  Array [
    "color: black /*.[2]*/",
  ],
]
`;

exports[`SWITCH ## WEB ## 01 isOpened: color: 'red', isClosed: color: 'blue' 1`] = `
Array [
  Object {
    "conditions": Array [
      Object {
        "case": "isOpened",
        "type": "$switch",
      },
    ],
    "items": Array [
      ".a { color:red /*./$switch.isOpened*/ }",
    ],
  },
  Object {
    "conditions": Array [
      Object {
        "case": "isClosed",
        "type": "$switch",
      },
    ],
    "items": Array [
      ".b { color:blue /*./$switch.isClosed*/ }",
    ],
  },
]
`;

exports[`SWITCH ## WEB ## 02 :hover => isOpened => :active => color: 'red' 1`] = `
Array [
  Object {
    "conditions": Array [
      Object {
        "case": "isOpened",
        "type": "$switch",
      },
    ],
    "items": Array [
      ".a:hover:active { color:red /*./$web/:hover/$switch.isOpened/$web*/ }",
    ],
  },
]
`;

exports[`SWITCH ## WEB ## 03 atomizeRuleset(isOpened => atomizeRuleset(color: 'red), isClosed => atomizeRuleset(color: 'green')) 1`] = `
Array [
  Object {
    "conditions": Array [
      Object {
        "case": "isOpened",
        "type": "$switch",
      },
    ],
    "items": Array [
      ".a { color:red /*.*/ }",
    ],
  },
  Object {
    "conditions": Array [
      Object {
        "case": "isClosed",
        "type": "$switch",
      },
    ],
    "items": Array [
      ".b { color:green /*.*/ }",
    ],
  },
]
`;

exports[`SWITCH ## WEB ## 04 variant's order: black-red-green-yellow-blue-brown 1`] = `
Array [
  Array [
    ".d { color:black /*.*/ }",
  ],
  Object {
    "conditions": Array [
      Object {
        "case": "isOpened",
        "type": "$switch",
      },
    ],
    "items": Array [
      ".b { color:red /*./$switch.isOpened*/ }",
    ],
  },
  Object {
    "conditions": Array [
      Object {
        "case": "isOpened",
        "type": "$switch",
      },
      Object {
        "case": "isClosed",
        "type": "$switch",
      },
    ],
    "items": Array [
      ".a { color:green /*./$switch.isOpened/$switch.isClosed*/ }",
    ],
  },
  Object {
    "conditions": Array [
      Object {
        "case": "isOpened",
        "type": "$switch",
      },
    ],
    "items": Array [
      ".c { color:yellow /*./$switch.isOpened/$web*/ }",
    ],
  },
  Array [
    ".f { color:blue /*./$web*/ }",
  ],
  Object {
    "conditions": Array [
      Object {
        "case": "isOpened",
        "type": "$switch",
      },
    ],
    "items": Array [
      ".e { color:brown /*./$web/$switch.isOpened*/ }",
    ],
  },
]
`;

exports[`SWITCH ## WEB ## 05 variant's order with array: $web => brown-blue-yellow-red-black 1`] = `
Array [
  Object {
    "conditions": Array [
      Object {
        "case": "isOpened",
        "type": "$switch",
      },
    ],
    "items": Array [
      ".a { color:brown /*.[0]/$web[0]/$switch.isOpened*/ }",
    ],
  },
  Array [
    ".b { color:blue /*.[0]/$web[1]*/ }",
  ],
  Object {
    "conditions": Array [
      Object {
        "case": "isOpened",
        "type": "$switch",
      },
    ],
    "items": Array [
      ".c { color:yellow /*.[1]/$switch.isOpened[0]/$web*/ }",
    ],
  },
  Object {
    "conditions": Array [
      Object {
        "case": "isOpened",
        "type": "$switch",
      },
    ],
    "items": Array [
      ".d { color:red /*.[1]/$switch.isOpened[1]*/ }",
    ],
  },
  Array [
    ".e { color:black /*.[2]*/ }",
  ],
]
`;
